# logmark_rs

./: .gitignore  Cargo.toml  Makefile
benches/: logger_benchmark.rs
benches/file_out/: env_logger.rs  fern.rs  slog.rs  winston.rs
benches/null_out/: env_logger.rs  fern.rs  slog.rs  winston.rs
src/: main.rs
