[package]
name = "logmark"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
env_logger = "0.11.5"
fern = "0.6.2"
log = "0.4.22"
once_cell = "1.19.0"
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"
tikv-jemalloc-ctl = { version = "0.6.0", features = ["stats"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
winston = { version = "0.1.2", path = "../winston/target/package/winston-0.1.2" }
winston_transport = "0.1.1"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "env_logger_file"
path = "benches/file_out/env_logger.rs"
harness = false

[[bench]]
name = "env_logger_null"
path = "benches/null_out/env_logger.rs"
harness = false

[[bench]]
name = "fern_file"
path = "benches/file_out/fern.rs"
harness = false

[[bench]]
name = "fern_null"
path = "benches/null_out/fern.rs"
harness = false

[[bench]]
name = "slog_file"
path = "benches/file_out/slog.rs"
harness = false

[[bench]]
name = "slog_null"
path = "benches/null_out/slog.rs"
harness = false

[[bench]]
name = "winston_file"
path = "benches/file_out/winston.rs"
harness = false

[[bench]]
name = "winston_null"
path = "benches/null_out/winston.rs"
harness = false

[[bench]]
name = "logger_benchmark"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
